# tracker

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  backend.Dockerfile  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  pyproject.toml
backend/: Dockerfile  entrypoint.sh
backend/app/: config.py  main.py  seed.py
backend/migrations/: env.py
backend/scripts/: seed_demo_projects.py
backend/tests/: conftest.py  test_admin_routes.py  test_admin_settings_routes.py  test_app_settings_service.py  test_assignment_eligible_users.py  test_assignment_model.py  test_assignment_routes.py  test_audit_log_constraints.py  test_audit_log_routes.py  test_audit_service.py  test_auth_routes.py  test_auth_scope.py  test_calendar_events_route.py  test_calendar_holidays_route.py  test_calendar_routes.py  test_contacts_routes.py  test_cor_create_service.py  test_cor_routes.py  test_custom_field_values.py  test_dashboard_routes.py  test_dashboard_widgets.py  test_dashboards.py  test_dept_scope_routes.py  test_event_about_users.py  test_event_calendar.py  test_event_models.py  test_event_multiday.py  test_event_occurrence_routes.py  test_event_routes.py  test_form_fields_routes.py  test_form_push.py  test_form_submissions_routes.py  test_form_targets.py  test_form_values.py  test_forms_models.py  test_forms_routes.py  test_forms_schemas.py  test_health.py  (+33 more)
caddy/: Caddyfile
docs/: architecture.md  okta-sso.md  operations.md  setup.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+395 files in other folders)
